<resources>
    <string name="app_name">fff</string>
    <string name="app_name_home">Rick and Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="Status">Status</string>
    <string name="ID">ID</string>
    <string name="Type">Type</string>
    <string name="Species">Species</string>
    <string name="header_text">header text</string>
    <string name="rick_and_morty">Rick and Morty App</string>
</resources>